# one-offs

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  maroon_survey_2023.ipynb  pylintrc  pyproject.toml  scratch_notebook.ipynb  small_tasks.ipynb
.github/: pull_request_template.md
.github/workflow/: lint.yml
.github/workflows/: format-and-fail.yml  lint.yml
geocode_verifier/: __main__.py
geocode_verifier/api/: census.py  census_geocode.py  google.py  google_maps.py
google_translate_pdfs/: README.md  __main__.py  file_management.py  translation.py
notebooks/: chicago_housing_authority_analysis.ipynb  idoc_report_parsing.ipynb  maroon_survey_2023.ipynb  ucpd_cluster_analysis.ipynb  ucpd_cluster_analysis_report.ipynb  ucpd_hex_cluster_analysis.ipynb  ucpd_reported_incdent_analysis.ipynb
pdf_parser/: __main__.py  file_management.py
util/: constants.py  files.py  general.py  pdf.py
