[tool.poetry]
name = "one-offs"
version = "0.1.0"
description = "This repository will house any one-off side projects I create on behalf of others or small scripts I write to accomplish x or y tasks."
authors = ["michplunkett <michplunkett@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-translate = "2.0.1"
pillow = "^9.5.0"
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
googlemaps = "^4.10.0"
us = "^2.0.2"
censusgeocode = "^0.5.2"
polars = "^0.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.281"
jupyter-black = "^0.3.4"
jupyter = "^1.0.0"

[tool.black]
extend-exclude='''.data\/'''
line-length = 80

[tool.isort]
profile= "black"
line_length = 80
skip = [".gitignore"]
skip_glob = ["**data/*"]

[tool.ruff]
fix=true
line-length = 80
target-version = "py311"
select = ["D"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["D104"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
