[tool.poetry]
name = "one-offs"
version = "0.1.0"
description = "This repository will house any one-off side projects I create on behalf of others or small scripts I write to accomplish x or y tasks."
authors = ["michplunkett <michplunkett@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-translate = "2.0.1"
pillow = "^9.5.0"
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
googlemaps = "^4.10.0"
us = "^2.0.2"
censusgeocode = "^0.5.2"
polars = "^0.18.0"
pre-commit = "^3.6.0"
scikit-learn = "^1.4.1.post1"
geopandas = "^0.14.3"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pyarrow = "^15.0.0"
jupyter = "^1.1.1"
pdfplumber = "^0.11.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
