[project]
name = "one-offs"
version = "0.1.0"
description = "This repository will house any one-off side projects I create on behalf of others or small scripts I write to accomplish x or y tasks."
authors = ["michplunkett <michplunkett@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "censusgeocode>=0.5.2",
    "geopandas>=1.0.1",
    "google-cloud-translate>=3.18.0",
    "googlemaps>=4.10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "notebook>=7.3.1",
    "numpy>=2.2.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.4",
    "pillow>=11.0.0",
    "polars==0.20.0",
    "pre-commit>=4.0.1",
    "pyarrow>=18.1.0",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.6.0",
    "us>=3.2.0",
]
